exports[`max-nested-describe > invalid(1): import {describe, it} from 'node:test';\ndescribe(\"d1\", () => { describe(\"d2\", () => { describe(\"d3\", () => { describe(\"d4\", () => { describe(\"d5\", () => { describe(\"d6\", () => { it(\"t\", () => {}); }); }); }); }); }); }); 1`] = `

  1 | import {describe, it} from 'node:test';
  2 | describe("d1", () => { describe("d2", () => { describe("d3", () => { describe("d4", () => { describe("d5", () => { describe("d6", () => { it("t", () => {}); }); }); }); }); }); });

`;

exports[`max-nested-describe > invalid(1): import {describe, it} from 'node:test';\ndescribe(\"d1\", () => { describe(\"d2\", () => { describe(\"d3\", () => { describe(\"d4\", () => { describe(\"d5\", () => { describe(\"d6\", () => { it(\"t\", () => {}); }); }); }); }); }); }); 2`] = `

Message:
  1 | import {describe, it} from 'node:test';
> 2 | describe("d1", () => { describe("d2", () => { describe("d3", () => { describe("d4", () => { describe("d5", () => { describe("d6", () => { it("t", () => {}); }); }); }); }); }); });
    |                                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Describe blocks are nested too deeply (6). Maximum allowed is 5.

`;

exports[`max-nested-describe > invalid(2): import {describe, it} from 'node:test';\ndescribe(\"d1\", () => { describe(\"d2\", () => { describe(\"d3\", () => { describe(\"d4\", () => { describe(\"d5\", () => { describe(\"d6\", () => { describe(\"d7\", () => { it(\"t\", () => {}); }); }); }); }); }); }); }); 1`] = `

  1 | import {describe, it} from 'node:test';
  2 | describe("d1", () => { describe("d2", () => { describe("d3", () => { describe("d4", () => { describe("d5", () => { describe("d6", () => { describe("d7", () => { it("t", () => {}); }); }); }); }); }); }); });

`;

exports[`max-nested-describe > invalid(2): import {describe, it} from 'node:test';\ndescribe(\"d1\", () => { describe(\"d2\", () => { describe(\"d3\", () => { describe(\"d4\", () => { describe(\"d5\", () => { describe(\"d6\", () => { describe(\"d7\", () => { it(\"t\", () => {}); }); }); }); }); }); }); }); 2`] = `

Message:
  1 | import {describe, it} from 'node:test';
> 2 | describe("d1", () => { describe("d2", () => { describe("d3", () => { describe("d4", () => { describe("d5", () => { describe("d6", () => { describe("d7", () => { it("t", () => {}); }); }); }); }); }); }); });
    |                                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Describe blocks are nested too deeply (6). Maximum allowed is 5.

`;

exports[`max-nested-describe > invalid(2): import {describe, it} from 'node:test';\ndescribe(\"d1\", () => { describe(\"d2\", () => { describe(\"d3\", () => { describe(\"d4\", () => { describe(\"d5\", () => { describe(\"d6\", () => { describe(\"d7\", () => { it(\"t\", () => {}); }); }); }); }); }); }); }); 3`] = `

Message:
  1 | import {describe, it} from 'node:test';
> 2 | describe("d1", () => { describe("d2", () => { describe("d3", () => { describe("d4", () => { describe("d5", () => { describe("d6", () => { describe("d7", () => { it("t", () => {}); }); }); }); }); }); }); });
    |                                                                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Describe blocks are nested too deeply (7). Maximum allowed is 5.

`;

exports[`max-nested-describe > invalid(3): import {describe, it} from 'node:test';\ndescribe(\"d1\", () => { describe(\"d2\", () => { describe(\"d3\", () => { it(\"t\", () => {}); }); }); }); 1`] = `

Options:
- max: 2

Code:
  1 | import {describe, it} from 'node:test';
  2 | describe("d1", () => { describe("d2", () => { describe("d3", () => { it("t", () => {}); }); }); });

`;

exports[`max-nested-describe > invalid(3): import {describe, it} from 'node:test';\ndescribe(\"d1\", () => { describe(\"d2\", () => { describe(\"d3\", () => { it(\"t\", () => {}); }); }); }); 2`] = `

Message:
  1 | import {describe, it} from 'node:test';
> 2 | describe("d1", () => { describe("d2", () => { describe("d3", () => { it("t", () => {}); }); }); });
    |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Describe blocks are nested too deeply (3). Maximum allowed is 2.

`;

exports[`max-nested-describe > invalid(4): import {describe, it} from 'node:test';\ndescribe(\"d1\", () => { describe(\"d2\", () => { describe(\"d3\", () => { describe(\"d4\", () => { describe(\"d5\", () => { describe(\"d6\", () => { it(\"t\", () => {}); }); }); }); }); }); }); 1`] = `

  1 | import {describe, it} from 'node:test';
  2 | describe("d1", () => { describe("d2", () => { describe("d3", () => { describe("d4", () => { describe("d5", () => { describe("d6", () => { it("t", () => {}); }); }); }); }); }); });

`;

exports[`max-nested-describe > invalid(4): import {describe, it} from 'node:test';\ndescribe(\"d1\", () => { describe(\"d2\", () => { describe(\"d3\", () => { describe(\"d4\", () => { describe(\"d5\", () => { describe(\"d6\", () => { it(\"t\", () => {}); }); }); }); }); }); }); 2`] = `

Message:
  1 | import {describe, it} from 'node:test';
> 2 | describe("d1", () => { describe("d2", () => { describe("d3", () => { describe("d4", () => { describe("d5", () => { describe("d6", () => { it("t", () => {}); }); }); }); }); }); });
    |                                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Describe blocks are nested too deeply (6). Maximum allowed is 5.

`;
